--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "ZapCidadão+",
-	"name": "ZapCidadão+",
+	"short_name": "Painel de Atendimento+",
+	"name": "Painel de Atendimento+",
 	"icons": [
 		{
 			"src": "favicon.ico",
