--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,7 +1,7 @@
 {
     "system": {
-        "name": "ZapCidadão",
-        "url": "https://zapcidadao.online",
+        "name": "Painel de Atendimento",
+        "url": "https://zap.privatezap.com.br",
         "color": {
             "lightTheme": {
                 "palette": {
